--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body class="text-center m-5 p-5">
-    <h1 class="pb-3">Dlouhodobá maturitní práce</h1>
+    <h1 class="pb-3">Vladykův dvůr IS</h1>
     <a class="btn btn-outline-primary" href="pages/employees/empList.php"><i class="pe-2 bi bi-person"></i>Zaměstnanci</a>
-    <a class="btn btn-outline-primary" href="pages/"><i class="pe-2 bi bi-file-earmark-text"></i>Smlouvy</a>
+    <a class="btn btn-outline-primary" href="pages/documents/docList.php"><i class="pe-2 bi bi-file-earmark-text"></i>Smlouvy</a>
     <a class="btn btn-outline-primary" href="pages/"><i class="pe-2 bi bi-person-workspace"></i>Pracovní vztahy</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
