--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dlouhodobá mat. práce</title>
+    <title>Vladykův dvůr</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 </head>
@@ -13,6 +13,7 @@
     <a class="btn btn-outline-primary" href="pages/employees/empList.php"><i class="pe-2 bi bi-person"></i>Zaměstnanci</a>
     <a class="btn btn-outline-primary" href="pages/documents/docList.php"><i class="pe-2 bi bi-file-earmark-text"></i>Smlouvy</a>
     <a class="btn btn-outline-primary" href="pages/contracts/contList.php"><i class="pe-2 bi bi-person-workspace"></i>Pracovní vztahy</a>
+    <a class="btn btn-outline-primary" href="pages/settings/settings.php"><i class="pe-2 bi bi-gear"></i>Nastavení</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
